# flightsw

./: Cargo.toml
firefly/: Cargo.toml
firefly-core/: Cargo.toml
firefly-cv/: Cargo.toml
firefly-gnc/: Cargo.toml
firefly/src/: lib.rs  logger.rs  main.rs
firefly/src/gnc/: mod.rs  satellite.rs
firefly/src/poc/: matrix_poc.rs  mod.rs
