[package]
name = "firefly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "0.31.1"
log = "0.4"
env_logger = "0.9"
#serialport = "4.0.1"

[profile.release]
debug=true
opt-level = 1
#lto = true
panic = 'unwind'


